--- a/Name Card Recognition/tutorial-vol1.ipynb
+++ b/Name Card Recognition/tutorial-vol1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OpenCV & Tesseract Tutorials - vol01\n",
+    "# OpenCV & Tesseract Tutorial - vol01\n",
     "\n",
     "[OpenCV를 활용한 명함인식 기능 구현 강좌](https://www.inflearn.com/course/opencv-%EA%B0%95%EC%A2%8C-%EB%AA%85%ED%95%A8%EC%9D%B8%EC%8B%9D/)를 듣고 정리한 내용입니다."
    ]
